--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FoodApp">
+        android:theme="@style/Theme.FoodApp"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.DetailsActivity"
             android:exported="false"
             android:label="Details"
-            android:theme="@style/DetailsActivityStyle"/>
+            android:theme="@style/DetailsActivityStyle" />
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
